deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /blueprint
  name: snapcast # kpt-set: ${name}
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|default|blueprint'
spec:
  type: ClusterIP
  ports:
  - port: 1780 # kpt-set: ${port}
    targetPort: 1780 # kpt-set: ${port}
    protocol: TCP
    name: http
  - port: 1705
    targetPort: 1705
    protocol: TCP
    name: rpc
  - port: 1704
    targetPort: 1704
    protocol: TCP
    name: stream
  selector:
    app.kubernetes.io/component: webapp
